crates/rig-derive/tests/ui/tool_context/fail_owned_context.stderr
error: a `ToolContext` parameter must have type `&mut ToolContext`
 --> tests/ui/tool_context/fail_owned_context.rs:5:14
  |
5 |     context: rig_agent::tool::ToolContext,
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
